unified media list page and minor ui changes

--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,10 @@
 
 @custom-variant dark (&:where(.dark, .dark *));
 
+html {
+  overflow-y: scroll;
+}
+
 a.active{
   font-weight: 600;
   color: #db0000;
